# banquet

./: .gitignore  CMakeLists.txt  LICENSE  README.md  aes.c  aes.cpp  aes.h  api.h  banquet.cpp  banquet.h  banquet_instances.c  banquet_instances.cpp  banquet_instances.h  field.cpp  field.h  kdf_shake.h  macros.h  morphism.sage  randomness.c  randomness.h  tape.cpp  tape.h  tree.cpp  tree.h  types.h  utils.cpp  utils.h
cmake/: FindGF2X.cmake  FindNTL.cmake
keccak/: CMakeLists.txt  KeccakHash.c  KeccakHash.h  KeccakHashtimes4.h  KeccakSponge.c  KeccakSponge.h  KeccakSpongetimes4.c  KeccakSpongetimes4.h  align.h
keccak/avx2/: KeccakP-1600-times4-SIMD256.c
keccak/opt64/: KeccakP-1600-64.macros  KeccakP-1600-SnP.h  KeccakP-1600-opt64.c
tests/: aes_test.cpp  banquet_test.cpp  field_test.cpp  tree_test.cpp  util_test.cpp  utils.cpp  utils.h
tools/: bench.c  bench.cpp  bench_free.cpp  bench_timing.cpp  bench_timing.h  bench_utils.cpp  bench_utils.h  parse_bench.py
